@@ -11,14 +11,14 @@
                     <div class="thumbnail">
                         <img class="product_image group list-group-image" th:attr="src='/static/img/jar' + ${prod.getId()} + '.png'" alt="" />
                         <div class="caption">
-                            <h4 class="group inner list-group-item-heading" th:text="${prod.name}">Product name</h4>
-                            <p class="group inner list-group-item-text" th:text="${prod.description}">Product description... </p>
+                            <h4 class="group inner list-group-item-heading" th:text="${prod.getName()}">Product name</h4>
+                            <p class="group inner list-group-item-text" th:text="${prod.getDescription()}">Product description... </p>
                             <div class="row">
                                 <div class="col-xs-12 col-md-6">
                                     <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                                 </div>
                                 <div class="col-xs-12 col-md-6">
-                                    <form method="post">
+                                    <form th:classappend="${userId == null} ? 'd-none' : ''" class="logged-in" method="post">
                                     <button class="btn btn-success add_to_cart" type="submit" th:value="${prod.getId()}"
                                             name="product">+ Add to cart</button>
                                     </form>
