@@ -28,3 +28,5 @@ TODO ------------------------------------------------------
  + every object-s foreign key in SQL should appear as an object reference in their fields
  - no more than 1 query in each controller method
  + user controller -> proper login/register
+ - Product object creation is recursive -> Product->ProductCategory->Product->ProductCategory forever
+ - use Supplier and ProductCategory product ArrayList field
